# polymer_nlp_extractor

./: .env.example  .gitignore  Dockerfile  NOTES.md  Procfile  README.md  config.json  model_analysis.md  project_structure.md  pyproject.toml  requirements.txt
notebooks/: polymer_extractor.ipynb
polymer_extractor/: main.py  model_config.py
polymer_extractor/api/: ensemble_inference.py  evaluation.py  finetune.py  grobid.py  groundtruth.py  preprocessing.py  setup.py
polymer_extractor/cli/: cli.py  grobid_cli.py  setup_cli.py
polymer_extractor/services/: constants.py  ensemble_inference_service.py  evaluation_service.py  fine_tune_service.py  grobid_service.py  groundtruth_service.py  preprocessing_service.py  setup_service.py  tei_processing_service.py  templates.py  token_packing_service.py  tokenizer_service.py
polymer_extractor/services/constants/: configuration_constants.py  greek_letters.py  material_names.py  polymer_names.py  property_names.py  property_table.py  scientific_symbols.py  scientific_units.py  value_formats.py
polymer_extractor/storage/: appwrite_client.py  bucket_manager.py  database_manager.py
polymer_extractor/utils/: file_utils.py  lexicon_guard.py  logging.py  paths.py
tests/: test_appwrite_client.py  test_bucket_manager.py  test_database_manager.py  test_logger.py  test_setup_service.py
workspace/datasets/testing/: test_057.csv
workspace/ground_truth/: test_057_processed.csv
